--- a/src/components/Cronometro/style.css
+++ b/src/components/Cronometro/style.css
@@ -54,3 +54,24 @@ button {
 .stop:hover {
     box-shadow: 0px 0px 75px 10px rgb(255, 0, 0);
 }
+
+@media screen and (width < 480px) {
+    .container {
+        width: 100vw;
+    }
+
+    h1 {
+        font-size: 3rem;
+    }
+
+    .buttons {
+        width: 80vw;
+
+    }
+
+    button {
+        width: 80px;
+        height: 80px;
+        font-size: 1.2rem;
+    }
+}
